# trading_simulator

./: .gitignore  COMMANDS.md  README.md  pyproject.toml
architecture/: architecture.md  generate_architecture.py
output/run_10k_baseline_2026-01-10_10-41-28/: simulation.txt
output/run_10k_baseline_2026-01-10_11-52-35/: simulation.txt
output/run_exponential_2026-01-10_11-44-10/: simulation.txt
output/run_exponential_2026-01-10_11-48-39/: simulation.txt
src/10K_baseline_harvest_engine_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/exponential_growth_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/options_simulator/: clear_output.py  main.py  simulation.py
src/simulator/: main.py  simulation.py
tests/: test_simulation.py
