[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "10K-baseline-harvest-engine-simulator"
version = "0.1.0"
description = "A Python simulator for the 10K Baseline Harvest Engine with accumulation and distribution phases"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "numpy",
    "matplotlib",
    "pytest",
]

[project.scripts]
start-simulator = "simulator.main:main"
clear-output = "simulator.clear_output:clear_output_dir"

[tool.setuptools.packages.find]
where = ["src"]